concord_macros/tests/dsl/fail/fail_unknown_retry_profile_behavior.rs
use concord_macros::api;

api! {
    client UnknownRetryProfileBehaviorApi {
        base "https://example.com"

        behavior bad {
            retry missing
        }

        defaults {
            behavior bad
        }
    }

    GET Ping
    path ["ping"]
    -> Text<String>
}

fn main() {}
